force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/HealthCloudGA__CardView_Dropdown__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Card View Dropdown</label>
</CustomObject>