force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/fields/HealthCloudGA__DefaultSubtab__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DefaultSubtab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, the visual force page will be loaded as a subtab in console.</description>
    <label>Default Subtab</label>
    <type>Checkbox</type>
</CustomField>