force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/fields/HealthCloudGA__Rec_Open_Type__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Rec_Open_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tab Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>