force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/fields/HealthCloudGA__Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Sub_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subcategory Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>