force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/fields/HealthCloudGA__SubcategoryLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubcategoryLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If your label has a namespace prefix, use Label_Namespace.Label_Name. Otherwise, use c.Label_Name.</inlineHelpText>
    <label>Subcategory Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>