force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/fields/HealthCloudGA__SubtabSortOrder__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubtabSortOrder__c</fullName>
    <label>Subtab Sort Order</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>