force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/fields/HealthCloudGA__Type__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Page Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>