force-app/main/default/src/objects/HealthCloudGA__CardView_Dropdown__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HealthCloudGA__CategoryLabel__c</columns>
    <columns>HealthCloudGA__Category__c</columns>
    <columns>HealthCloudGA__DefaultSubtab__c</columns>
    <columns>HealthCloudGA__Param_String__c</columns>
    <columns>HealthCloudGA__Rec_Open_Type__c</columns>
    <columns>HealthCloudGA__Sub_Category__c</columns>
    <columns>HealthCloudGA__SubcategoryLabel__c</columns>
    <columns>HealthCloudGA__SubtabSortOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>